# nxs

./: LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml
nxs/: cli.py  models.py  output.py  profiles.py  runner.py  ticket.py
