[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nxs"
version = "0.3.1"
description = "Credential capability mapping for NetExec"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "nicetrykiddo" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]
keywords = ["netexec", "nxc", "active-directory", "pentest", "red-team", "smb", "ldap", "wmi"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed",
]

[project.scripts]
nxs = "nxs.cli:app"

[project.urls]
Homepage = "https://github.com/nicetrykiddo/nxs"
Repository = "https://github.com/nicetrykiddo/nxs"

[tool.hatch.build.targets.wheel]
packages = ["nxs"]